[gd_scene load_steps=11 format=3 uid="uid://i6eggl1rln6k"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_pvrnu"]
[ext_resource type="Texture2D" uid="uid://36wpqqi6o3pr" path="res://graphics/player/player.png" id="1_w8rkk"]
[ext_resource type="Texture2D" uid="uid://c7nt0p85wunyt" path="res://graphics/decals/white.png" id="2_ns1rp"]
[ext_resource type="Shader" path="res://scenes/player/player.gdshader" id="3_77m6l"]

[sub_resource type="Gradient" id="Gradient_mcthg"]
offsets = PackedFloat32Array(0.0116732, 0.575875, 0.996109)
colors = PackedColorArray(0.173078, 0.799262, 0.833713, 1, 0.827451, 0.968627, 0.94902, 0.87451, 0, 0.831373, 0.776471, 0.576471)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4rad0"]
gradient = SubResource("Gradient_mcthg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_i55lr"]
emission_shape = 1
emission_sphere_radius = 13.15
particle_flag_disable_z = true
direction = Vector3(0.345, 0, 0)
spread = 9.65
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1200.0
initial_velocity_max = 1500.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.15
scale_max = 0.5
color_ramp = SubResource("GradientTexture1D_4rad0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ivm5m"]
shader = ExtResource("3_77m6l")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_02p3p"]
radius = 63.0079

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_n4wei"]
polygon = PackedVector2Array(68, -17, 75, -9, 78, -7, 87, -8, 94, -6, 97, -3, 99, -1, 104, -1, 111, 1, 114, 5, 116, 7, 121, 6, 126, 6, 127, 10, 126, 12, 131, 11, 133, 13, 134, 16, 135, 20, 135, 23, 135, 28, 134, 34, 131, 37, 125, 35, 123, 33, 123, 37, 125, 39, 122, 40, 116, 40, 110, 38, 109, 40, 106, 44, 103, 46, 101, 47, 98, 49, 98, 52, 98, 55, 94, 57, 91, 57, 83, 56, 81, 56, 72, 56, 68, 55, 61, 54, 61, 51, 63, 48, 65, 45, 60, 42, 52, 43, 50, 44, 47, 44, 46, 46, 42, 50, 34, 56, 19, 62, 1, 65, -16, 62, -31, 55, -42, 46, -53, 33, -60, 18, -61, 1, -60, -10, -53, -33, -34, -51, -15, -61, 3, -63, 20, -60, 33, -54, 47, -44, 57, -30, 60, -20)

[node name="Player" type="CharacterBody2D" groups=["Entity"]]
position = Vector2(-2, -1)
collision_mask = 63
script = ExtResource("1_pvrnu")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(141, 22)
emitting = false
process_material = SubResource("ParticleProcessMaterial_i55lr")
texture = ExtResource("2_ns1rp")
lifetime = 0.15
one_shot = true

[node name="PlayerImage" type="Sprite2D" parent="."]
visibility_layer = 2
material = SubResource("ShaderMaterial_ivm5m")
position = Vector2(39, 4)
rotation = 1.5708
texture = ExtResource("1_w8rkk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 1)
shape = SubResource("CircleShape2D_02p3p")

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(131, 11)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(135, 24)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(131, 35)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_n4wei")

[node name="Timers" type="Node" parent="."]

[node name="GrenadeReloadTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="LaserTimer" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[node name="RollTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="Timers/GrenadeReloadTimer" to="." method="_on_grenade_reload_timer_timeout"]
[connection signal="timeout" from="Timers/LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="Timers/RollTimer" to="." method="_on_roll_timer_timeout"]
